modified index me

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
 body{
     background-color:  #EAF6F6;
     }
-/********************************************************TAG SELECTORS*********************************************************************/
 
+/********************************************************TAG SELECTORS*********************************************************************/
+p{
+  font-size: 20px;
+}
+.name{
+  font-size: 40px;;
+}
     hr{
         border-style: dotted none none;
         background-color:#EAF6F6;
@@ -24,5 +30,8 @@ body{
 
 /********************************************************ID SELECTORS*********************************************************************/
       #heading{
-        color: white;
+        font-family: "Sacramento",cursive;
+        font-size: 70px;
+        text-align: center;
+        color: rgb(17, 119, 102);
       }
